add login, admin index, common interfaces

--- a/src/views/categories/index.hbs
+++ b/src/views/categories/index.hbs
@@ -4,6 +4,7 @@
 <body>
     <div class="container">
         <a href="/categories/create" class="btn btn-primary mt-5">Add Category</a>
+        <i class="bi bi-align-bottom"></i>
         <table class="table mt-4">
             <thead>
                 <tr>
