--- a/src/views/admin/create.hbs
+++ b/src/views/admin/create.hbs
@@ -2,10 +2,10 @@
 <html lang="en">
 {{> head}}
 <body>
-    {{> admin_layout}}
-
-    <main class="">
-
+    {{> adminLayout}}
+    
+    <main class="content-detail" id="common_content-area">
+        <h1>Hello World</h1>
     </main>
 
 {{> bottom}}
