--- a/src/views/admin/index.hbs
+++ b/src/views/admin/index.hbs
@@ -2,7 +2,7 @@
 <html lang="en">
 {{> head}}
 <body>
-    {{> admin_layout}}
+    {{> adminLayout}}
 
     <main id="common_content-area" class="common_content-area">
         <div class="image-slider">
