--- a/src/views/partials/adminLayout.hbs
+++ b/src/views/partials/adminLayout.hbs
@@ -1,10 +1,20 @@
 <header class="common_interface-header" id="common_interface-header">
     <div class="common_interface-header-l_area">
-        <a href=""><img class="" src="images/header/logo.png" alt=""></a>
+        <a href="/admin"><img class="" src="/images/header/logo.png" alt=""></a>
         <span style="font-size: 35px; cursor: pointer;" onclick="toggle()">&#9776;</span>
     </div>
     <div class="common_interface_header_r-area">
-        <i style="font-size: 38px;" class="bi bi-person-circle"></i>
+        <div class="header_r-area-info">
+            <img src="" alt="">
+            <label for="info-checkbox">Vu Van Vuong
+                <span class="fas fa-caret-down"></span>
+            </label>
+            <input type="checkbox" name="" id="info-checkbox">
+            <ul>
+                <li><a href="/admin/profile">Your profile</a></li>
+                <li><a href="/logout">Logout</a></li>
+            </ul>
+        </div>
     </div>
 </header>
 
@@ -12,11 +22,11 @@
     <a href="javascript:void(0)" class="l_sidebar-closebtn" onclick="toggle()">&times;</a>
     <div class="l_sidebar-main_menu">
         <h2>Menu</h2>
-        <a href="#"><i class="fas fa-user-circle"></i>Home</a>
-        <a href="#"><i class="fa fa-users"></i>About</a>
-        <a href="#"><i class="fa fa-book"></i>Portfolio</a>
-        <a href="#"><i class="fa fa-file-o"></i>Services</a>
-        <a href="#"><i class="fa fa-phone"></i>Contact</a>
+        <a href="/admin"><i class="fas fa-user-circle"></i>Home</a>
+        <a href="#"><i class="fa fa-users"></i>Staff Accounts</a>
+        <a href="#"><i class="fa fa-book"></i>Trainer Accounts</a>
+        <a href="#"><i class="fa fa-file-o"></i>Your Profile</a>
+        <a href="#"><i class="fa fa-phone"></i>Logout</a>
     </div>
 </aside>
 
