--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -173,6 +173,11 @@
     user-select: none;
 }
 
+.header_r-area-info label:hover {
+    opacity: 0.8;
+    transition: .1s;
+}
+
 .header_r-area-info input {
     display: none;
 }
@@ -316,6 +321,7 @@
     /* background-color: rgb(250, 250, 250); */
     /* background-color: red; */
     padding: 20px;
+    min-height: 100vh;
 }
 /* ending block */
 
@@ -422,4 +428,125 @@
 
 #radio4:checked ~ .navigation-auto .auto-btn4 {
     background-color: #40D3DC;
+}
+
+
+/* Modal common action form */
+
+.modal-action_form {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.4);
+    align-items: center;
+    justify-content: center;
+    display: none;
+}
+
+.modal-action_form.open {
+    display: flex;
+}
+
+.modal-action_form-container {
+    background-color: white;
+    width: 900px;
+    max-width: calc(100% - 32px);
+    min-height: 400px;
+    border-radius: 10px;
+    position: relative;
+    animation: modalFadeIn ease .6s;
+}
+
+.modal-action_form-header {
+    background-color: #009688;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+    color: white;
+    font-weight: 500;
+    border-top-left-radius: 9.2px;
+    border-top-right-radius: 9.2px;
+}
+
+.modal-action_form-close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    color: white;
+    cursor: pointer;
+    padding: 12px;
+    font-size: 1.4rem;
+}
+
+.modal-action_form-close:hover {
+    opacity: 0.8;
+    transition: .1s;
+}
+
+.modal-action_form-body {
+    padding: 16px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.modal-action_form-body div {
+    width: 48%;
+    margin-bottom: 10px;
+}
+
+.modal-action_form-body div label {
+    font-size: 1.2rem;
+    display: block;
+    margin-bottom: 4px;
+    font-weight: 500;
+}
+
+.modal-action_form-body input {
+    border: 1px solid #ccc;
+    font-size: 1.1rem;
+    padding: 5px 12px;
+    width: 100%;
+    border-radius: 5px;
+}
+
+.modal-action_form-body .btn-action {
+    background-color: #009688;
+    border: none;
+    color: white;
+    font-size: 1.4rem;
+    text-transform: uppercase;
+    width: 100%;
+    font-weight: 500;
+    margin-top: 15px;
+    /* padding: 10px; */
+}
+
+.modal-action_form-body .btn-action:hover {
+    opacity: 0.8;
+    transition: .1s;
+}
+
+.modal-action_form-footer {
+    padding: 0 16px;
+    text-align: right;
+}
+
+.modal-action_form-footer a {
+    color: #2196F3;
+}
+
+@keyframes modalFadeIn {
+    from {
+        transform: translateY(-140px);
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
