--- a/src/views/partials/bottom.hbs
+++ b/src/views/partials/bottom.hbs
@@ -1,3 +1,28 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+
+<script>
+    function toggle() {
+        document.getElementById("common_interface-l_sidebar").classList.toggle("toggle_active1");
+        document.getElementById("common_interface-header").classList.toggle("toggle_active2");
+        //document.getElementById("common_content-area").classList.toggle("toggle_active2");
+    }
+</script>
+
+<script>
+    const actionInfo = document.querySelector(".js-action-info");
+    const modalActionForm = document.querySelector(".js-modal-action_form");
+    const modalClose = document.querySelector(".js-modal-action_form-close");
+    const modalContainer = document.querySelector(".js-modal-action_form-container");
+    function showActionForm() {
+        modalActionForm.classList.add("open");
+    }
+    function hideActionForm() {
+        modalActionForm.classList.remove("open");
+    }
+    actionInfo.addEventListener("click", showActionForm);
+    modalClose.addEventListener("click", hideActionForm);
+    modalActionForm.addEventListener("click", hideActionForm);
+    modalContainer.addEventListener("click", event => event.stopPropagation());
+</script>
