--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -192,11 +192,12 @@
     margin: 0;
     position: absolute;
     right: 0;
-    top: 66px;
+    top: 65px;
     width: 100%;
     border-radius: 5px;
     display: none;
     user-select: none;
+    border: 1px solid rgba(0,0,0,0.08);
 }
 
 .header_r-area-info ul::before {
@@ -307,21 +308,19 @@
     justify-content: center;
     align-items: center;
     background-color: #23E3C9;
-    /* height: 100vh; */
+    margin-top: 70px;
 }
 
 /* setup for common layouts */
 /* transtition */
 #common_content-area {
     transition: margin-left .5s;
-    margin-top: 70px;
 }
 /* background to view content */
 .content-detail {
-    /* background-color: rgb(250, 250, 250); */
-    /* background-color: red; */
-    padding: 20px;
+    padding: 20px 50px;
     min-height: 100vh;
+    margin-top: 70px;
 }
 /* ending block */
 
@@ -504,6 +503,7 @@
     display: block;
     margin-bottom: 4px;
     font-weight: 500;
+    cursor: pointer;
 }
 
 .modal-action_form-body input {
@@ -523,7 +523,8 @@
     width: 100%;
     font-weight: 500;
     margin-top: 15px;
-    /* padding: 10px; */
+    border-radius: 5px;
+    padding: 5px 12px;
 }
 
 .modal-action_form-body .btn-action:hover {
@@ -549,4 +550,18 @@
         opacity: 1;
         transform: translateY(0);
     }
+}
+
+/* content detail - main - header */
+.content-detail-header {
+    display: flex; 
+    justify-content: space-between; 
+    align-items: center;
+    width: 100%;
+}
+
+.content-detail-header-search {
+    width: 40%;
+    display: flex;
+    align-items: center;
 }
