--- a/src/views/categories/index.hbs
+++ b/src/views/categories/index.hbs
@@ -4,7 +4,12 @@
 <body>
     <div class="container">
         <a href="/categories/create" class="btn btn-primary mt-5">Add Category</a>
-        <i class="bi bi-align-bottom"></i>
+        
+        <form action="/categories/search" method="GET">
+            <input type="search" name="q" id="">
+            <input type="submit" value="Search">
+        </form>
+
         <table class="table mt-4">
             <thead>
                 <tr>
