--- a/src/views/demo/create.hbs
+++ b/src/views/demo/create.hbs
@@ -4,15 +4,15 @@
 <body>
     <div class="container">
         <div class="mt-5">
-            <h3>Add Category</h3>
+            <h3>Add demo</h3>
         </div>
-        <form method="POST" action="/categories/store" class="mt-4"> 
+        <form method="POST" action="/demo/store" class="mt-4"> 
             <div class="form-group">
-                <label for="categoryName">Category Name</label>
+                <label for="categoryName">Demo Name</label>
                 <input type="text" class="form-control" id="categoryName" name="name">
             </div>
             <div class="form-group">
-                <label for="categoryDescription">Category Description</label>
+                <label for="categoryDescription">Demo Description</label>
                 <textarea class="form-control" id="categoryDescription" name="description"></textarea>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
