--- a/src/views/demo/edit.hbs
+++ b/src/views/demo/edit.hbs
@@ -4,15 +4,15 @@
 <body>
     <div class="container">
         <div class="mt-4">
-            <h3>Update Category</h3>
+            <h3>Update Demo</h3>
         </div>
-        <form class="mt-4" method="POST", action="/categories/update/?id={{data._id}}">
+        <form class="mt-4" method="POST", action="/demo/update/?id={{data._id}}">
             <div class="form-group">
-                <label for="name">Category Name</label>
+                <label for="name">Demo Name</label>
                 <input type="text" class="form-control" value="{{data.name}}" id="name" name="name">
             </div>
             <div class="form-group">
-                <label for="description">Category Description</label>
+                <label for="description">Demo Description</label>
                 <textarea class="form-control" id="description" name="description">{{data.description}}</textarea>
             </div>
             <button type="submit" class="btn btn-primary">Update</button>
