update index staff, ava staff, add search function

--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -1,4 +1,5 @@
 /* Login page */
+
 .login-main {
     width: 100%;
     height: 800px;
@@ -114,6 +115,7 @@
     color: inherit;
 }
 
+
 /* common header */
 
 .common_interface-header {
@@ -157,7 +159,7 @@
 }
 
 .header_r-area-info img {
-    width: 56px; 
+    width: 56px;
     height: 56px;
     border-radius: 100px;
 }
@@ -184,7 +186,7 @@
     display: none;
 }
 
-#info-checkbox:checked + ul {
+#info-checkbox:checked+ul {
     display: block;
 }
 
@@ -199,7 +201,7 @@
     border-radius: 5px;
     display: none;
     user-select: none;
-    border: 1px solid rgba(0,0,0,0.08);
+    border: 1px solid rgba(0, 0, 0, 0.08);
 }
 
 .header_r-area-info ul::before {
@@ -222,7 +224,7 @@
 }
 
 .header_r-area-info ul li:not(:last-child) {
-    border-bottom: 1px solid rgba(0,0,0,0.2);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 .header_r-area-info ul li a {
@@ -236,6 +238,7 @@
     color: black;
     transition: 0.2s;
 }
+
 
 /*common left sidebar */
 
@@ -294,6 +297,7 @@
     margin-left: 50px;
 }
 
+
 /* common left sidebar toggle */
 
 .toggle_active1 {
@@ -304,7 +308,9 @@
     margin-left: 280px;
 }
 
+
 /* common interface image slider */
+
 .common_content-area {
     display: flex;
     justify-content: center;
@@ -313,17 +319,26 @@
     margin-top: 70px;
 }
 
+
 /* setup for common layouts */
+
+
 /* transtition */
+
 #common_content-area {
     transition: margin-left .5s;
 }
+
+
 /* background to view content */
+
 .content-detail {
     padding: 20px 50px;
     min-height: 100vh;
     margin-top: 70px;
 }
+
+
 /* ending block */
 
 .image-slider {
@@ -341,8 +356,8 @@
 }
 
 .slides input {
-    display: none; 
-} 
+    display: none;
+}
 
 .slide {
     width: 20%;
@@ -354,7 +369,9 @@
     height: 500px;
 }
 
+
 /* css for manual slide navigation */
+
 .navigation-manual {
     position: absolute;
     width: 800px;
@@ -379,23 +396,25 @@
     background-color: #40D3DC;
 }
 
-#radio1:checked ~ .first {
+#radio1:checked~.first {
     margin-left: 0;
 }
 
-#radio2:checked ~ .first {
+#radio2:checked~.first {
     margin-left: -20%;
 }
 
-#radio3:checked ~ .first {
+#radio3:checked~.first {
     margin-left: -40%;
 }
 
-#radio4:checked ~ .first {
+#radio4:checked~.first {
     margin-left: -60%;
-} 
+}
+
 
 /* css for automatic navigation */
+
 .navigation-auto {
     position: absolute;
     display: flex;
@@ -415,19 +434,19 @@
     margin-right: 40px;
 }
 
-#radio1:checked ~ .navigation-auto .auto-btn1 {
+#radio1:checked~.navigation-auto .auto-btn1 {
     background-color: #40D3DC;
 }
 
-#radio2:checked ~ .navigation-auto .auto-btn2 {
+#radio2:checked~.navigation-auto .auto-btn2 {
     background-color: #40D3DC;
 }
 
-#radio3:checked ~ .navigation-auto .auto-btn3 {
+#radio3:checked~.navigation-auto .auto-btn3 {
     background-color: #40D3DC;
 }
 
-#radio4:checked ~ .navigation-auto .auto-btn4 {
+#radio4:checked~.navigation-auto .auto-btn4 {
     background-color: #40D3DC;
 }
 
@@ -440,7 +459,7 @@
     right: 0;
     left: 0;
     bottom: 0;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(0, 0, 0, 0.4);
     align-items: center;
     justify-content: center;
     display: none;
@@ -554,10 +573,12 @@
     }
 }
 
+
 /* content detail - main - header */
+
 .content-detail-header {
-    display: flex; 
-    justify-content: space-between; 
+    display: flex;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
 }
@@ -566,4 +587,16 @@
     width: 40%;
     display: flex;
     align-items: center;
+}
+
+
+/* action-button delete */
+
+.underline-white {
+    text-decoration: none;
+    color: white;
+}
+
+.underline-white:hover {
+    color: unset;
 }
