Update image interface trainee

--- a/src/views/admin/create.hbs
+++ b/src/views/admin/create.hbs
@@ -64,7 +64,7 @@
                 </div>
                 <div>
                     <label for="fullName" class="">Full name</label>
-                    <input type="text" name="fullName" id="fullName" placeholder="Your full name..." required>
+                    <input type="text" name="name" id="name" placeholder="Your full name..." required>
                 </div>
                 <div>
                     <label for="password" class="">Password</label>
