--- a/src/views/partials/traineeLayout.hbs
+++ b/src/views/partials/traineeLayout.hbs
@@ -5,7 +5,7 @@
     </div>
     <div class="common_interface_header_r-area">
         <div class="header_r-area-info">
-            <img src="" alt="">
+            {{!-- <img src="" alt=""> --}}
             <label for="info-checkbox">@fpt.edu.vn
                 <span class="fas fa-caret-down"></span>
             </label>
@@ -23,7 +23,8 @@
     <div class="l_sidebar-main_menu">
         <h2>Menu</h2>
         <a href="/trainee"><i class="bi bi-house-door"></i></i>Home</a>
-        <a href="#"><i class="bi bi-briefcase"></i>My course</a>
+        <a href="/demo"><i class="bi bi-briefcase"></i>My courses</a>
+        <a href="/demo"><i class="bi bi-briefcase"></i>Curiculum</a>
         <a href="#"><i class="fa fa-file-o"></i>Your Profile</a>
         <a href="#"><i class="bi bi-box-arrow-right"></i></i>Logout</a>
     </div>
