--- a/src/views/admin/index.hbs
+++ b/src/views/admin/index.hbs
@@ -31,7 +31,7 @@
         </div>
     </main>
 
-    <script type="text/javascript">
+    <script>
         var counter = 2;
         setInterval(function() {
             document.getElementById("radio" + counter).checked = true;
