--- a/src/views/admin/edit.hbs
+++ b/src/views/admin/edit.hbs
@@ -11,9 +11,9 @@
         <form class="row g-3 mt-4" method="POST" action="">
             <div class="text-left">
                 <img style="width: 200px; height: 200px; margin-right: 20px;" src="/images/admin/background_image1.jpg" class="img-thumbnail" alt="">
-                <div style="display: inline-block; position: relative;">
+                <div class="chosen_image-container">
                     <img style="width: 200px; height: 200px;" src="" class="img-thumbnail" id="chosenImage" alt="">
-                    <i style="position: absolute;" class="bi bi-x-lg"></i>
+                    <i id="cancel-btn" class="bi bi-x-lg"></i>
                 </div>
             </div>
             <div class="input-group mt-4 mb-3">
@@ -55,23 +55,6 @@
             </div>
         </form>
     </main>
-    
-    <script>
-        const img = document.querySelector("#chosenImage");
-        const uploadBtn = document.querySelector("#btn-upload-img");
-
-        uploadBtn.addEventListener("change", function() {
-            const file = this.files[0];
-            if(file) {
-                const reader = new FileReader();
-                reader.onload = function() {
-                    const result = reader.result;
-                    img.src = result;
-                }
-                reader.readAsDataURL(file);
-            }
-        });
-    </script>
 
 {{> bottom}}
 </body>
