add input type in editing page

--- a/src/views/admin/edit.hbs
+++ b/src/views/admin/edit.hbs
@@ -48,6 +48,10 @@
                     <option value="{{id}}">ABC</option>
                 </select>
             </div>
+            <div class="mb-3">
+                <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
             <div class="col-12 mt-5">
                 <button type="submit" class="btn btn-primary fs-5" style="font-weight: 500;">Update
                     <i class="bi bi-check2 fs-5"></i>
