--- a/src/views/partials/adminLayout.hbs
+++ b/src/views/partials/adminLayout.hbs
@@ -23,7 +23,8 @@
     <div class="l_sidebar-main_menu">
         <h2>Menu</h2>
         <a href="/admin"><i class="fas fa-user-circle"></i>Home</a>
-        <a href="/admin/create"><i class="fa fa-users"></i>Staff Accounts</a>
+        <a href="/admin/admin-accounts"><i class="fa fa-users"></i>Staff Accounts</a>
+        <a href="/admin/admin-accounts"><i class="fa fa-users"></i>Staff Accounts</a>
         <a href="#"><i class="fa fa-book"></i>Trainer Accounts</a>
         <a href="#"><i class="fa fa-file-o"></i>Your Profile</a>
         <a href="#"><i class="fa fa-phone"></i>Logout</a>
