--- a/src/views/demo/index.hbs
+++ b/src/views/demo/index.hbs
@@ -14,6 +14,7 @@
             <thead>
                 <tr>
                     <th scope="col">#</th>
+                    <th scope="col">Image</th>
                     <th scope="col">Name</th>
                     <th scope="col">Description</th>
                     <th scope="col">Actions</th>
@@ -23,6 +24,9 @@
                 {{#each data}}
                 <tr>
                     <th scope="row">{{@index}}</th>
+                    <td>
+                        <img style="width: 200px; height: 200px;" src="data:image/{{this.image.contentType}};base64,{{convertImage this.image.data}}" alt="">
+                    </td>
                     <td>{{this.name}}</td>
                     <td>{{this.description}}</td>
                     <td>
