update adding from at admin page

--- a/src/views/demo/index.hbs
+++ b/src/views/demo/index.hbs
@@ -30,8 +30,8 @@
                     <td>{{this.name}}</td>
                     <td>{{this.description}}</td>
                     <td>
-                        <a class="btn btn-link" href="/demo/edit/?id={{this._id}}">Edit</a>
-                        <a class="btn btn-link" href="/demo/delete/?id={{this._id}}">Delete</a>
+                        <a class="btn btn-link" href="/demo/edit?id={{this._id}}">Edit</a>
+                        <a class="btn btn-link" href="/demo/delete?id={{this._id}}">Delete</a>
                     </td>
                 </tr>
                 {{/each}}
