--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -445,6 +445,7 @@
     align-items: center;
     justify-content: center;
     display: none;
+    z-index: 1;
 }
 
 .modal-action_form.open {
@@ -525,7 +526,7 @@
     text-transform: uppercase;
     width: 100%;
     font-weight: 500;
-    margin-top: 15px;
+    margin-top: 30px;
     border-radius: 5px;
     padding: 5px 12px;
 }
