--- a/src/views/admin/admin-accounts.hbs
+++ b/src/views/admin/admin-accounts.hbs
@@ -31,24 +31,24 @@
             <tbody>
                 {{#each admins}}
                 <tr>
-                    <th scope="row">1</th>
+                    <th scope="row">{{@index}}</th>
                     <th scope="col">
-                        <img src="{{this.image}}" alt="">
+                        <img style="width: 200px; height: 200px;" src="data:image/{{this.image.contentType}};base64,{{convertImage this.image.data}}" alt="">
                     </th>
                     <th scope="col">{{this.email}}</th>
                     <th scope="col">{{this.name}}</th>
                     <th scope="col">{{this.age}}</th>
-                    <th scope="col">{{this.dob}}</th>
+                    <th scope="col">{{this.dob}}</th>       
                     <th scope="col">{{this.address}}</th>
                     <td style="text-align: center;">
                         <div class="btn-group" style="z-index: 0; height: 40px;" role="group" aria-label="Basic mixed styles example">
                             <a href="/admin/accounts/edit?id={{this._id}}" class="btn btn-success js-edit-info" style="border-bottom-right-radius: unset; border-top-right-radius: unset;">
                                 <i class="bi bi-pencil-square"></i><span class=" fs-6" style="margin-left: 5px;">Edit</span>
                             </a>
-                            <a href="/account/delete?id={{this._id}}" class="btn btn-danger" style="border-radius: unset;">
+                            <a href="/admin/admin-accounts/delete?id={{this._id}}" class="btn btn-danger" style="border-radius: unset;">
                                 <i class="bi bi-x-lg"></i><span class=" fs-6" style="margin-left: 5px;">Delete</span>
                             </a>
-                            <a href="/account/delete?id={{this._id}}" class="btn btn-warning" style="border-bottom-left-radius: unset; border-top-left-radius: unset;">
+                            <a href="/admin/admin-accounts/delete?id={{this._id}}" class="btn btn-warning" style="border-bottom-left-radius: unset; border-top-left-radius: unset;">
                                 <i class="bi bi-gear"></i><span class=" fs-6" style="margin-left: 5px;">Set default password</span>
                             </a>
                         </div>
@@ -66,7 +66,7 @@
                 <i style="margin-right: 20px;" class="bi bi-person-plus"></i>
                 New Account
             </header>
-
+            
             <form class="modal-action_form-body" method="POST" action="/admin/admin-accounts/store" enctype="multipart/form-data">
                 <div>
                     <label for="email" class="">Email</label>
@@ -77,10 +77,6 @@
                     <input type="text" name="name" id="name" placeholder="Your full name..." required>
                 </div>
                 <div>
-                    <label for="password" class="">Password</label>
-                    <input type="password" name="password" id="password" placeholder="Your password..." required>
-                </div>
-                <div>
                     <label for="address" class="">Address</label>
                     <input type="text" name="address" id="address" placeholder="Your address..." required>
                 </div>
@@ -88,11 +84,17 @@
                     <label for="dob" class="">Date of birth</label>
                     <input type="date" name="dob" id="dob" placeholder="Your date of birth..." required>
                 </div>
-                <div>   
-                    <label for="avatar" class="">Avatar</label>
-                    <input type="file" name="image" id="avatar" accept="image/*">
+                <div>
+                    <label for="btn-add-img" class="form-label">Upload</label>
+                    <input class="form-control" type="file" id="btn-add-img" name="image" accept="image/*">
                 </div>
-                <button type="submit" class="btn-action">Add<i style="margin-left: 5px;" class="bi bi-check2"></i></button>
+                <div class="text-center">
+                    <label for="previewImage" class="form-label">Avatar</label>
+                    <img style="width: 200px; height: 200px;" id="previewImage" name="avatar" src="" class="img-thumbnail" alt="">
+                </div>
+                <button type="submit" class="btn-action">
+                    Add<i style="margin-left: 5px;" class="bi bi-check2"></i>
+                </button>
             </form>
 
             <footer class="modal-action_form-footer">
